# nature

./: Cargo.toml  README.md  ROADMAP.md  USAGE.md  build.sh  complex.nature  fibonacci.nature  install.sh  nature  nature_interpreter.py  requirements.txt  setup.py  setup_conda_env.bat  setup_conda_env.sh  temperature.nature  test.nature
.cargo/: config.toml
examples/: calculator.nature  custom.nature  demo.nature  hybrid_demo.nature  math.nature  strings.nature
language/: __init__.py  ast.py  code_generator.py  debugger.py  importer.py  parser.py  repl.py  utils.py
sandbox/: README.md  app.py  books.db
sandbox/templates/: index.html
src/: graph_executor.rs  interpreter.rs  ir.rs  main.rs  module_manager.rs  python_executor.rs  translator.rs
