[package]
name = "nature"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.19", features = ["auto-initialize", "extension-module"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cached = "0.44"
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4"] }